try to fix ocaml breakage on rawhide

--- a/tclpkg/gv/Makefile.am
+++ b/tclpkg/gv/Makefile.am
@@ -113,6 +113,9 @@ libgv_ocaml_la_CPPFLAGS = $(BASECPPFLAGS) $(OCAML_INCLUDES)
 gv.ml gv.mli: gv_ocaml.cpp
 gv_ocaml.cpp: gv.i
 	$(SWIG) -c++ -ocaml -o gv_ocaml.cpp $(srcdir)/gv.i
+	mv $@ $@.orig
+	sed '/int caml_array_length/mlsize_t caml_array_length/' $@.orig > $@
+	rm $@.orig
 swig.mli:
 	$(SWIG) -ocaml -co swig.mli
 swig.ml:
