--- a/configure.ac
+++ b/configure.ac
@@ -3244,6 +3244,7 @@ echo "  sfdp:          $use_sfdp"
 echo "  shared:        $use_shared"
 echo "  static:        $use_static"
 echo "  qt:            $use_qt"
+echo "  x:             $use_xlib"
 echo ""
 echo "commands:"
 echo "  dot:           Yes (always enabled)"
