--- a/graphviz.spec.in
+++ b/graphviz.spec.in
@@ -201,65 +201,86 @@ fi
 %files
 %defattr(-,root,root,-)
 %doc AUTHORS COPYING ChangeLog NEWS README
-%{_bindir}/*
-%exclude %{_bindir}/diffimg
 %exclude %{_bindir}/dot_builtins
-%if 0%{?__X}
-%exclude %{_bindir}/lefty
-%exclude %{_bindir}/lneato
-%exclude %{_bindir}/dotty
-%exclude %{_bindir}/vimdot
-%exclude %{_mandir}/man1/lefty.1*
-%exclude %{_mandir}/man1/lneato.1*
-%exclude %{_mandir}/man1/dotty.1*
-%exclude %{_mandir}/man1/vimdot.1*
-%endif
-%if 0%{?_QT}
-%exclude %{_bindir}/gvedit
-%exclude %{_mandir}/man1/gvedit.1*
-%endif
+%{_bindir}/acyclic
+%{_bindir}/bcomps
+%{_bindir}/ccomps
+%{_bindir}/circo
+%{_bindir}/cluster
+%{_bindir}/dijkstra
+%{_bindir}/dot
+%{_bindir}/dot2gxl
+%{_bindir}/fdp
+%{_bindir}/gc
+%{_bindir}/gml2gv
+%{_bindir}/graphml2gv
+%{_bindir}/gv2gml
+%{_bindir}/gv2gxl
+%{_bindir}/gvcolor
+%{_bindir}/gvgen
+%{_bindir}/gvmap
+%{_bindir}/gvmap.sh
+%{_bindir}/gvpack
+%{_bindir}/gvpr
+%{_bindir}/gxl2dot
+%{_bindir}/gxl2gv
+%{_bindir}/mm2gv
+%{_bindir}/neato
+%{_bindir}/nop
+%{_bindir}/osage
+%{_bindir}/patchwork
+%{_bindir}/prune
+%{_bindir}/sccmap
+%{_bindir}/sfdp
+%{_bindir}/tred
+%{_bindir}/twopi
+%{_bindir}/unflatten
+%{_mandir}/man1/acyclic.1*
+%{_mandir}/man1/bcomps.1*
+%{_mandir}/man1/ccomps.1*
+%{_mandir}/man1/circo.1*
+%{_mandir}/man1/cluster.1*
+%{_mandir}/man1/diffimg.1*
+%{_mandir}/man1/dijkstra.1*
+%{_mandir}/man1/dot.1*
+%{_mandir}/man1/fdp.1*
+%{_mandir}/man1/gc.1*
+%{_mandir}/man1/gml2gv.1*
+%{_mandir}/man1/graphml2gv.1*
+%{_mandir}/man1/gv2gml.1*
+%{_mandir}/man1/gv2gxl.1*
+%{_mandir}/man1/gvcolor.1*
+%{_mandir}/man1/gvgen.1*
+%{_mandir}/man1/gvmap.1*
+%{_mandir}/man1/gvmap.sh.1*
+%{_mandir}/man1/gvpack.1*
+%{_mandir}/man1/gvpr.1*
+%{_mandir}/man1/gxl2gv.1*
+%{_mandir}/man1/mm2gv.1*
+%{_mandir}/man1/neato.1*
+%{_mandir}/man1/nop.1*
+%{_mandir}/man1/osage.1*
+%{_mandir}/man1/patchwork.1*
+%{_mandir}/man1/prune.1*
+%{_mandir}/man1/sccmap.1*
+%{_mandir}/man1/sfdp.1*
+%{_mandir}/man1/tred.1*
+%{_mandir}/man1/twopi.1*
+%{_mandir}/man1/unflatten.1*
+%{_mandir}/man7/graphviz.7*
+%{_libdir}/libcdt.so.*
+%{_libdir}/libcgraph.so.*
+%{_libdir}/libgraph.so.*
+%{_libdir}/libgvc.so.*
+%{_libdir}/libgvpr.so.*
+%{_libdir}/libpathplan.so.*
+%{_libdir}/libxdot.so.4*
 %dir %{_libdir}/graphviz
-%{_libdir}/*.so.*
-%{_libdir}/graphviz/*.so.*
-%{_mandir}/man1/*.1*
-%{_mandir}/man7/*.7*
+%{_libdir}/graphviz/libgvplugin_core.so.*
+%{_libdir}/graphviz/libgvplugin_dot_layout.so.*
+%{_libdir}/graphviz/libgvplugin_neato_layout.so.*
 %dir %{_datadir}/graphviz
-%{_datadir}/graphviz/gvpr
-%exclude %{_libdir}/graphviz/libgvplugin_gd.*
-%if 0%{?PANGOCAIRO}
-%exclude %{_libdir}/graphviz/libgvplugin_pango.*
-%endif
-%if 0%{?LASI}
-%exclude %{_libdir}/graphviz/libgvplugin_lasi.*
-%endif
-%if 0%{?GDK_PIXBUF}
-%exclude %{_libdir}/graphviz/libgvplugin_gdk_pixbuf.*
-%endif
-%if 0%{?GTK}
-%exclude %{_bindir}/vimdot
-%exclude %{_libdir}/graphviz/libgvplugin_gtk.*
-%exclude %{_libdir}/graphviz/libgvplugin_xlib.*
-%endif
-%if 0%{?GHOSTSCRIPT}
-%exclude %{_libdir}/graphviz/libgvplugin_gs.*
-%endif
-%if 0%{?RSVG}
-%exclude %{_libdir}/graphviz/libgvplugin_rsvg.*
-%endif
-%if 0%{?WEBP}
-%exclude %{_libdir}/graphviz/libgvplugin_webp.*
-%endif
-%if 0%{?DEVIL}
-%exclude %{_libdir}/graphviz/libgvplugin_devil.*
-%endif
-%if 0%{?MING}
-%exclude %{_libdir}/graphviz/libgvplugin_ming.*
-%exclude %{_libdir}/graphviz/*fdb
-%endif
-%if 0%{?SMYRNA}
-%exclude %{_bindir}/smyrna
-%exclude %{_mandir}/man1/smyrna.1*
-%endif
+%{_datadir}/graphviz/gvpr/*
 
 #-- graphviz-x rpm --------------------------------------------------
 %if 0%{?__X}
@@ -434,7 +455,7 @@ C# extension for graphviz.
 %defattr(-,root,root,-)
 %dir %{_libdir}/graphviz/sharp
 %{_libdir}/graphviz/sharp/*
-%{_mandir}/man3/*.3sharp.gz
+%{_mandir}/man3/*.3sharp.*
 %endif
 
 #-- graphviz-guile rpm --------------------------------------------
@@ -451,7 +472,7 @@ Guile extension for graphviz.
 %defattr(-,root,root,-)
 %dir %{_libdir}/graphviz/guile
 %{_libdir}/graphviz/guile/*
-%{_mandir}/man3/*.3guile.gz
+%{_mandir}/man3/*.3guile.*
 %endif
 
 #-- graphviz-io rpm -----------------------------------------------
@@ -468,7 +489,7 @@ Io extension for graphviz.
 %defattr(-,root,root,-)
 %dir %{_libdir}/graphviz/io
 %{_libdir}/graphviz/io/*
-%{_mandir}/man3/*.3io.gz
+%{_mandir}/man3/*.3io.*
 %endif
 
 #-- graphviz-java rpm ---------------------------------------------
@@ -485,7 +506,7 @@ Java extension for graphviz.
 %defattr(-,root,root,-)
 %dir %{_libdir}/graphviz/java
 %{_libdir}/graphviz/java/*
-%{_mandir}/man3/*.3java.gz
+%{_mandir}/man3/*.3java.*
 %endif
 
 #-- graphviz-lua rpm ----------------------------------------------
@@ -504,7 +525,7 @@ Lua extension for graphviz.
 %{_libdir}/graphviz/lua/*
 %{_libdir}/lua*/*
 %{_datadir}/graphviz/demo/*.lua*
-%{_mandir}/man3/*.3lua.gz
+%{_mandir}/man3/*.3lua.*
 %endif
 
 #-- graphviz-ocaml rpm --------------------------------------------
@@ -521,7 +542,7 @@ Ocaml extension for graphviz.
 %defattr(-,root,root,-)
 %dir %{_libdir}/graphviz/ocaml
 %{_libdir}/graphviz/ocaml/*
-%{_mandir}/man3/*.3ocaml.gz
+%{_mandir}/man3/*.3ocaml.*
 %endif
 
 #-- graphviz-perl rpm ---------------------------------------------
@@ -540,7 +561,7 @@ Perl extension for graphviz.
 %{_libdir}/graphviz/perl/*
 %{_libdir}/perl*/*
 %{_datadir}/graphviz/demo/*.pl*
-%{_mandir}/man3/*.3perl.gz
+%{_mandir}/man3/*.3perl.*
 %endif
 
 #-- graphviz-php rpm ----------------------------------------------
@@ -562,7 +583,7 @@ PHP extension for graphviz.
 %{php_extdir}/gv.so
 %{_datadir}/php*/*
 %{_datadir}/graphviz/demo/*.php*
-%{_mandir}/man3/*.3php.gz
+%{_mandir}/man3/*.3php.*
 %endif
 
 #-- graphviz-python rpm -------------------------------------------
@@ -581,7 +602,7 @@ Python extension for graphviz.
 %{_libdir}/graphviz/python/*
 %{_libdir}/python*/*
 %{_datadir}/graphviz/demo/*.py*
-%{_mandir}/man3/*.3python.gz
+%{_mandir}/man3/*.3python.*
 %endif
 
 #-- graphviz-R rpm ---------------------------------------------
@@ -598,7 +619,7 @@ R extension for graphviz.
 %defattr(-,root,root,-)
 %dir %{_libdir}/graphviz/R
 %{_libdir}/graphviz/R/*
-%{_mandir}/man3/*.3r.gz
+%{_mandir}/man3/*.3r.*
 %endif
 
 #-- graphviz-ruby rpm ---------------------------------------------
@@ -617,7 +638,7 @@ Ruby extension for graphviz.
 %{_libdir}/graphviz/ruby/*
 %{_libdir}/*ruby*/*
 %{_datadir}/graphviz/demo/*.rb*
-%{_mandir}/man3/*.3ruby.gz
+%{_mandir}/man3/*.3ruby.*
 %endif
 
 #-- graphviz-tcl rpm ----------------------------------------------
@@ -638,8 +659,8 @@ Various tcl packages (extensions) for the graphviz tools.
 %{_datadir}/graphviz/demo/*.tcl*
 %{_datadir}/graphviz/demo/*_data
 %{_datadir}/graphviz/demo/entities.html
-%{_mandir}/man3/*.3tcl.gz
-%{_mandir}/man3/*.3tk.gz
+%{_mandir}/man3/*.3tcl.*
+%{_mandir}/man3/*.3tk.*
 %endif
 
 #-- graphviz-devel rpm --------------------------------------------
@@ -658,7 +679,7 @@ This package contains development files for graphviz.
 %{_includedir}/graphviz
 %{_libdir}/*.so
 %{_libdir}/pkgconfig/*.pc
-%{_mandir}/man3/*.3.gz
+%{_mandir}/man3/*.3.*
 %exclude %{_libdir}/graphviz/libgvplugin*
 %exclude %{_libdir}/graphviz/*.so
 
