--- a/lib/graph/Makefile.am
+++ b/lib/graph/Makefile.am
@@ -10,6 +10,8 @@ AM_CPPFLAGS = \
 	-I$(top_srcdir) \
 	-I$(top_srcdir)/lib/cdt
 
+if WITH_CGRAPH
+else
 pkginclude_HEADERS = graph.h
 noinst_HEADERS = libgraph.h triefa.h parser.h agxbuf.h
 noinst_LTLIBRARIES = libgraph_C.la
@@ -17,6 +19,7 @@ lib_LTLIBRARIES = libgraph.la
 pkgconfig_DATA = libgraph.pc
 man_MANS = graph.3
 pdf_DATA = graph.3.pdf
+endif
 
 libgraph_C_la_SOURCES = \
 	attribs.c agxbuf.c edge.c graph.c graphio.c lexer.c \
