Move the "#define WITH_CGRAPH 1" to lib/common/types.h
Running autoheader on lib/gvc/gvc.h would also: "/* #undef extern */"
which breaks the build.   No #undef in types.h - plus it feels like a better location.

--- a/configure.ac
+++ b/configure.ac
@@ -194,7 +194,7 @@ AM_INIT_AUTOMAKE(AC_PACKAGE_NAME, AC_PACKAGE_VERSION)
 # Suppress verbose compile lines
 m4_ifdef([AM_SILENT_RULES], [AM_SILENT_RULES([yes])])
 
-AC_CONFIG_HEADERS([config.h lib/gvc/gvc.h])
+AC_CONFIG_HEADERS([config.h lib/common/types.h])
 
 # put BUILDDATE in its own file so that only targets that use it get rebuilt
 echo "#define BUILDDATE \"$VERSION_DATE\"" > builddate.h
