--- a/lib/common/types.h.in
+++ b/lib/common/types.h.in
@@ -14,6 +14,9 @@
 #ifndef GV_TYPES_H
 #define GV_TYPES_H
 
+/* Define if you want CGRAPH */
+#undef WITH_CGRAPH
+
 #include <stdio.h>
 #include <assert.h>
 #include <signal.h>
