include tcldot.h in source package

--- a/tclpkg/tcldot/Makefile.am
+++ b/tclpkg/tcldot/Makefile.am
@@ -35,6 +35,7 @@ pdf = tcldot.3tcl.pdf
 html = tcldot.html
 
 if WITH_TCL
+noinst_HEADERS = tcldot.h
 pkgtcl_LTLIBRARIES = libtcldot.la libtcldot_builtin.la
 
 man_MANS = $(man)
