adjust LIBADDs so as to only add to final component and not to subcomponents

--- a/lib/expr/Makefile.am
+++ b/lib/expr/Makefile.am
@@ -31,10 +31,6 @@ pdf_DATA = expr.3.pdf
 libexpr_C_la_SOURCES = excc.c excontext.c exdata.c exerror.c \
 	exeval.c exexpr.c exlexname.c exopen.c exrewind.c extoken.c \
 	extype.c exzero.c exparse.y exnospace.c exstash.c 
-libexpr_C_la_LIBADD = \
-	$(top_builddir)/lib/ast/libast_C.la \
-	$(top_builddir)/lib/vmalloc/libvmalloc_C.la \
-	$(top_builddir)/lib/sfio/libsfio_C.la
 libexpr_C_la_DEPENDENCIES = \
 	$(top_builddir)/lib/ast/libast_C.la \
 	$(top_builddir)/lib/vmalloc/libvmalloc_C.la \
@@ -45,7 +41,7 @@ libexpr_C_la_DEPENDENCIES = \
 #libexpr_la_SOURCES = $(libexpr_C_la_SOURCES)
 #libexpr_la_LIBADD = $(libexpr_C_la_LIBADD)
 
-$(libexpr_C_la_OBJECTS) $(libexpr_la_OBJECTS): \
+$(libexpr_C_la_OBJECTS): \
 	exparse.h exparse.c exgram.h exop.h
 
 exop.h: exparse.h
