make ortho a component of layout engines, not gvc, so that dotlayout has no (well less) unresolved symbols

--- a/lib/neatogen/Makefile.am
+++ b/lib/neatogen/Makefile.am
@@ -45,4 +45,9 @@ libneatogen_C_la_SOURCES = adjust.c circuit.c edges.c geometry.c \
     overlap.c call_tri.c \
 	compute_hierarchy.c delaunay.c multispline.c $(WITH_IPSEPCOLA_SOURCES)
 
+if WITH_ORTHO
+libneatogen_C_la_DEPENDENCIES = \
+	$(top_builddir)/lib/ortho/libortho_C.la
+endif
+
 EXTRA_DIST = Makefile.old $(IPSEPCOLA_SOURCES) gvneatogen.vcproj
