--- a/lib/ns/Makefile.am
+++ b/lib/ns/Makefile.am
@@ -14,22 +14,15 @@ AM_CPPFLAGS = \
 	-I$(top_srcdir)/lib/neatogen \
 	-I$(top_srcdir)/lib/pack \
 	-I$(top_srcdir)/lib/pathplan \
-	-I$(top_srcdir)/lib/ns \
-	-I$(top_srcdir)/lib/intset \
 	-I$(top_srcdir)/lib/$(GRAPH) \
 	-I$(top_srcdir)/lib/cdt
 
-if WITH_ORTHO
 AM_CFLAGS = -D_BLD_gvc=1
-endif
 
-noinst_HEADERS = fPQ.h ortho.h maze.h partition.h rawgraph.h sgraph.h structures.h trap.h
+noinst_HEADERS = ns.h
+noinst_LTLIBRARIES = libns_C.la
 
-if WITH_ORTHO
-noinst_LTLIBRARIES = libortho_C.la
-endif
+libns_C_la_SOURCES = ns.c
 
-libortho_C_la_SOURCES = fPQ.c maze.c ortho.c partition.c rawgraph.c sgraph.c trapezoid.c
-
-EXTRA_DIST = Makefile.old gvortho.vcproj
+EXTRA_DIST = 
  
