--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -2,8 +2,9 @@
 ## Process this file with automake to produce Makefile.in
 
 SUBDIRS = cdt graph cgraph pathplan sfio vmalloc ast \
-	vpsc rbtree ortho sparse patchwork expr common \
+	vpsc rbtree ns intset ortho sparse patchwork expr common \
 	pack xdot label gvc ingraphs topfish glcomp \
-	circogen dotgen dotgen2 fdpgen neatogen twopigen sfdpgen osage gvpr
+	circogen dotgen dotgen2 fdpgen neatogen \
+	twopigen sfdpgen osage gvpr
 
 EXTRA_DIST = Makefile.old gvc.vcproj gvc.def 
