Update project files for Visual Studio to use cgraph

--- a/lib/gvc.vcproj
+++ b/lib/gvc.vcproj
@@ -309,6 +309,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\common\ellipse.c"
+				>
+			</File>
+			<File
 				RelativePath=".\common\emit.c"
 				>
 			</File>
